[gd_scene load_steps=4 format=3 uid="uid://dtyhugn5lp8uw"]

[ext_resource type="Script" path="res://scenes/title.gd" id="1_jyqf0"]
[ext_resource type="PackedScene" uid="uid://d26plswt5o2b7" path="res://scenes/components/title_button.tscn" id="2_lg53f"]

[sub_resource type="LabelSettings" id="LabelSettings_cgrju"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jyqf0")

[node name="boxReference2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="boxReference" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -288.0
offset_right = 320.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.0
offset_top = 126.0
offset_right = 105.0
offset_bottom = 149.0
grow_horizontal = 2
text = "Example Title"
label_settings = SubResource("LabelSettings_cgrju")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -231.0
offset_right = 60.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 0
vertical = true

[node name="NewGame" parent="BoxContainer" instance=ExtResource("2_lg53f")]
layout_mode = 2
text = "New Game"

[node name="Continue" parent="BoxContainer" instance=ExtResource("2_lg53f")]
layout_mode = 2
text = "Continue"

[node name="Quit" parent="BoxContainer" instance=ExtResource("2_lg53f")]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="BoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="BoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="BoxContainer/Quit" to="." method="_on_quit_pressed"]
